objects/TW1_Registro_de_ligacoes__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Data_hora__c</fullName>
        <label>Data/hora</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Descricao__c</fullName>
        <label>Descrição</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Motivo__c</fullName>
        <label>Motivo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Informações diversas</fullName>
                </value>
                <value>
                    <fullName>Horário de funcionamento</fullName>
                </value>
                <value>
                    <fullName>Engano</fullName>
                </value>
                <value>
                    <fullName>Transferências</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Nome_do_cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nome do cliente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Conta pessoal padrão</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Registro de ligações</relationshipLabel>
        <relationshipName>Registro_de_liga_es</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_SGL__c</fullName>
        <label>SGL</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Registro de ligações</relationshipLabel>
        <relationshipName>Registro_de_liga_es</relationshipName>
        <type>Lookup</type>
    </fields>

    <label>Registro de ligações</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TW1_Data_hora__c</columns>
        <columns>TW1_Motivo__c</columns>
        <columns>TW1_Nome_do_cliente__c</columns>
        <columns>TW1_Descricao__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>TW1_SGL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RL{000}</displayFormat>
        <label>Código do Registro de ligações</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registro de ligações</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>